Chart resize, language select

--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -1,4 +1,5 @@
 {
+"exit": "Выйти",
 "continueLabel": "Далее",
 "tplHasBeenAdded": "Шаблон добавлен. Для приминения изменений обновите страницу (Shift+F5)",
 "tplHasBeenDeleted": "Шаблон удален. Для приминения изменений обновите страницу (Shift+F5)",
@@ -49,7 +50,8 @@
 "exportItem" : "Экспортировать",
 "processItem" : "Обработать",
 "moveItem" : "Переместить",
-"removeSelection" : "Отменить выдиление",
+"removeSelection" : "Отменить выделение",
+"syncFlightHeaders": "Синхронизировать опознавательные данные",
 	
 "flightFilesList": "Перечень файлов для конвертирования",
 "flightsConvertSelected": "Конв. выбранное",
@@ -130,10 +132,10 @@
 "maxVal": "Макс. зн.",
 "prefix": "Префикс",
 
-"chartPrintTable" : "Цифропечать",
-"chartPrintInNewWindow" : "График",
-"monochromeEventsPrint" : "Моно-ная печать",
-"eventListSave" : "Сохранить",
+"chartPrintTable" : "Экран в Excel",
+"chartPrintInNewWindow" : "График на печать",
+"monochromeEventsPrint" : "Ч/Б печать",
+"eventListSave" : "Бланк",
 
 "dataTable": {
 	"sLengthMenu": "Показывать по _MENU_ записей на странице",
@@ -160,6 +162,7 @@
 	"fileConvert": "Конверт.",
 	"filePreview": "Предпросмотр",
 	"chooseFile": "Выберите файл",
+	"helpTitle": "Краткая информация",
 	
 	"flightsItem": "Полеты",
 	"slicesItem": "Срезы",
@@ -184,7 +187,7 @@
 	"bruTypesStepLenth": "Длительность кадра (в секундах)",
 	"bruTypesFrameLength": "Размер кадра (в байтах)",
 	"bruTypesWordLength": "Размер слова (в байтах)",
-	"bruTypesAditionalInfo": "Дополнительная информация",
+	"bruTypesAditionalInfo": "Доп. информация",
 	"bruTypesNoAditionalInfo": "Отсутствует",
 	"usersList": "Перечень пользователей",
 	"usersLogin": "Имя пользователя",
@@ -283,6 +286,7 @@
 	"centringlndg": "Центровка на посадке",
 	"weightto": "Вес на взлете",
 	"weightlndg": "Вес на посадке",
+	"tto": "Тнв на взлете",
 	"capitan": "КВС",
 	"route":"Маршрут",
 	"centring": "Центровка",
@@ -303,7 +307,7 @@
 	"eventName" : "Название события",
 	"algText" : "Алгоритм",
 	"status" : "Статус",
-	"aditionalInfo" : "Дополнительная информация",
+	"aditionalInfo" : "Доп. информация",
 	"noEvents" : "События отсутствуют",
 	"processingWasNotPerformed" : "Обработка не выполнялась",
 	"processing" : "События отсутствуют",
@@ -346,6 +350,7 @@
 	"centringlndg": "Центровка на посадке",
 	"weightto": "Вес на взлете",
 	"weightlndg": "Вес на посадке",
+	"tto": "Тнв на взлете",
 	"capitan": "КВС",
 	"route":"Маршрут",
 	"duration" : "Длительность", 
@@ -365,7 +370,7 @@
 	"eventName" : "Название события",
 	"algText" : "Алгоритм",
 	"status" : "Статус",
-	"aditionalInfo" : "Дополнительная информация",
+	"aditionalInfo" : "Доп. информация",
 	"reliability": "Достов.",
 	"comment": "Комментарий",
 	"loginForm":"Форма авторизации",
@@ -386,12 +391,13 @@
 	"centringlndg": "Центровка на посадке",
 	"weightto": "Вес на взлете",
 	"weightlndg": "Вес на посадке",
+	"tto": "Тнв на взлете",
 	"capitan": "КВС",
 	"departureAirport": "Аэропорт вылета",
 	"arrivalAirport": "Аэропорт посадки",
 	"departureAirportName": "Аэропорт вылета (Название)",
 	"arrivalAirportName": "Аэропорт посадки (Название)",
-	"aditionalInfo": "Дополнительная информация",
+	"aditionalInfo": "Доп. информация",
 	"bortNum": "Номер борта",
 	"voyage":"Рейс",
 	"engines":"Номера дигателей",
@@ -401,7 +407,7 @@
 	"ignoreDueUploading": "Не загружать",
 	"continue": "Далее",
 	"slice": "Вырезать",
-	"sliceCyclic": "Перерезать",
+	"sliceCyclic": "Разрез/разворот",
 	"compareToEtalon": "Сравнивать с эталоном",
 	"doNotCompate": "нет",
 	"message": "Сообщение",
