--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -696,6 +696,7 @@
 	"userLang": "Язык",
 	"userLogo": "Логотип",
 	"noDataToOpenAccess" : "Нет доступных данных",
+	"userModal": "Форма управления пользовательскими данными",
     "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
 }
 
