--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -139,6 +139,7 @@
 "userList" : "Перечень",
 "userSave" : "Сохранить",
 "userCancel" : "Отменить",
+"confimUserDeletion": "Подтвердите удаление пользователей",
 "userCreaitonFailServerError": "Ошибка связи при попытке создания пользователя. Попробуйте позже.",
 
 "chartPrintTable" : "Экран в Excel",
@@ -664,7 +665,16 @@
     "userCreate":"Создать",
     "userPrivilege":"Привилегии",
     "userRole":"Полномочия",
+    "userAlreadyExist": "Пользователь с указанным логином уже существует",
     "userCreationFail":"Не удалось создать пользователя. Проверьте корректность введенных данных и повторите попытку.",
+    "pleaseInputUserLogin":"Пожалуйста, введите логин",
+	"pleaseInputUserCompany":"Пожалуйста, введите организацию пользователя",
+	"pleaseInputPass":"Пожалуйста, введите и повторите пароль",
+    "pleaseChoosePrivilege": "Укажите привилегии пользователя",
+    "pleaseChooseRole": "Укажите роль пользователя",
+    "userAlreadyExistOrImpossible": "Не возможно создать пользователя с указаными логином и паролем", 
+	"passwordRepeatingIncorrect":"Пароли не совпадают",
+	"errorDuringUserDeletion": "Ошибка при попытке удаления пользователя",
     "userMySubscriber":"Мой подписчик",
     "message": "Сообщение",
     "userCreatedSuccesfully": "Пользователь создан",
