--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -718,7 +718,8 @@
 	"arrivalAirport": "Аэропорт посадки",
 	"bruType":"Тип регистратора", 
 	"performer":"Обработал",
-	"aditionalInfo": "Доп. инф."
+	"aditionalInfo": "Доп. инф.",
+	"searchBroughtNoResult": "Поиск не дал результата"
 }
 
 
