user_options added

--- a/www/lang/EN.lang
+++ b/www/lang/EN.lang
@@ -132,7 +132,20 @@
 "maxVal": "Макс. зн.",
 "prefix": "Префикс",
 
-"chartPrintTable" : "Digital Table",
+"userActions": "User Actions",
+"userAdd" : "Add User",
+"userEdit" : "Edit User",
+"userDelete" : "Delete User",
+"userList" : "User List",
+"userSave" : "Save Yser",
+"userCancel" : "Cancel",
+"confimUserDeletion": "Confirm",
+"userCreaitonFailServerError": "Fail Server",
+
+"searchFlights": "Search by Flight",
+"searchFlightsApplyAlg": "Search",
+
+"chartPrintTable" : "Digital Table Excel",
 "chartPrintInNewWindow" : "Print Chart",
 "monochromeEventsPrint" : "Mono print",
 "eventListSave" : "Report",
@@ -170,13 +183,6 @@
 	"filePreview": "Preview",
 	"chooseFile": "Choose File",
 	"helpTitle": "ShortInformation",
-	
-	"flightsItem": "Flights",
-	"slicesItem": "Slices",
-	"enginesItem": "Engines",
-	"bruTypesItem": "FDR",
-	"docsItem": "Documents",
-	"usersItem": "Users",
 	
 	"viewItem" : "View",
 	
@@ -227,6 +233,7 @@
     "flightView": "View",
     "flightFollow": "Follow",
     "flightUpload": "Loading",
+	
     "flightDelete": "Deleting",
     "flightExport": "Export",
     "flightImport": "Inport",
@@ -237,11 +244,9 @@
 "flightsPage":{	
 	"upload": "Upload",
 	"flightsItem": "Flights",
-	"slicesItem": "Slices",
-	"enginesItem": "Engines",
 	"bruTypesItem": "FDR",
-	"docsItem": "Documents",
 	"usersItem": "Users",
+	"searchItem": "Search",
 	
 	"viewItem" : "View",
 	
@@ -648,44 +653,72 @@
 	"userName":"User Name",
 	"company":"Организация",
     "pass":"Password",
-    "repeatPass":"Password (повторно)",
+    "repeatPass":"Password (repeat)",
     "userCreationFailed": "Не удалось Create пользователя",
     "notAllFieldsMatched": "Not all the fields are filled",
     "userCreate":"Create",
-    "userPrivilege":"Привилегии",
-    "userMySubscriber":"Мой подписчик",
+    "userPrivilege":"User Privilege",
+	"userRole":"User Role",
+    "userAlreadyExist": "User Already Exist",
+    "userCreationFail":"User Creation Fail",
+    "pleaseInputUserLogin":"Input User Login",
+	"pleaseInputUserCompany":"Input User Company",
+	"pleaseInputPass":"Input Pass",
+    "pleaseChoosePrivilege": "Choose Privilege",
+    "pleaseChooseRole": "Choose Role",
+    "userAlreadyExistOrImpossible": "Impossible", 
+	"passwordRepeatingIncorrect":"Password Repeating Incorrect",
+	"errorDuringUserDeletion": "Delete Error",
+    "userMySubscriber":"My Subscriber",
     "message": "Message",
-    "userCreatedSuccesfully": "Пользователь создан",
-    "openAccessForFlights" : "Предоставить доступ к полетам",
+    "userCreatedSuccesfully": "User Created Succesfully",
+    "openAccessForFlights" : "Open Access For Flights",
     "bortNum": "A/C",
 	"voyage":"Flight",
 	"flightDate": "The time and date of the flight",
     "departureAirport": "Departure Airport",
 	"arrivalAirport": "Arrival Airport",
 	"bruTypeName": "FDR",
-	"author": "Автор",
-	"access": "Доступен",
-	"openAccessForSlices" : "Предоставить доступ к срезам",
+	"author": "author",
+	"access": "Access",
+	"openAccessForSlices" : "AccessForSlices",
 	"sliceCode" : "Code среза",
 	"sliceName" : "Имя среза",
 	"sliceCreationTime" : "Дата создания среза",
-	"sliceLastModifyTime" : "Дата последнего редактирования",
-	"sliceAuthor" : "Автор",
-	"sliceIsEtalon" : "Эталон",
-	"openAccessForEngines": "Предоставить доступ к двигателям",
-	"engineSerial": "Серийный номер двигателя",
-	"openAccessForBruTypes": "Предоставить доступ к типам рагистраторов",
-	"bruTypesName": "FDR",
+	"sliceLastModifyTime" : "ModifyTime",
+	"sliceAuthor" : "author",
+	"sliceIsEtalon" : "Etalon",
+	"openAccessForEngines": "Access For Engines",
+	"engineSerial": "Serial No Engine",
+	"openAccessForBruTypes": "Access For FDR",
+	"bruTypesName": "FDR Type",
 	"bruTypesStepLenth": "Duration кадра (в секундах)",
 	"bruTypesFrameLength": "Размер кадра (в байтах)",
 	"bruTypesWordLength": "Размер слова (в байтах)",
-	"bruTypesAuthor": "Автор",
-	"openAccessForUsers": "Предоставить доступ к пользователям",
+	"bruTypesAuthor": "author",
+	"openAccessForUsers": "Access For Users",
 	"userLogin": "User Name",
-	"userCompany": "Организация",
-	"userAuthor": "Автор",
-	"noDataToOpenAccess" : "Нет доступных данных",
+	"userCompany": "Company",
+	"userAuthor": "author",
+	"userLang": "Language",
+	"userLogo": "Logo",
+	"noDataToOpenAccess" : "No Data",
+	"userModal": "User Modal",
     "notAllowedByPrivilege" : "No privilege"
+},
+
+"searchFlightPage":{
+	"bort":"A/C",
+	"voyage":"Rout",
+	"flightDateFrom": "Date From",
+	"flightDateTo": "Date To",
+	"uploadTime":"Upload Time", 
+	"flightTime":"Start Copy Time", 
+	"departureAirport": "Departure Airport",
+	"arrivalAirport": "Arrival Airport",
+	"bruType":"FDR Type", 
+	"performer":"Operator",
+	"aditionalInfo": "Aditional Info"
 }
 
 
