Exceptions printing sections

--- a/www/lang/EN.lang
+++ b/www/lang/EN.lang
@@ -356,6 +356,7 @@
 	"login":"Login",
 	"userName":"User Name",
     "pass":"Password",
+    "eventCodeMask": "Event code mask",
     "rememberMe":"Remember",
     "loginFailed": "Login Failed",
     "notAllowedByPrivilege" : "No privilege"
