--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -356,6 +356,7 @@
 	"login":"Авторизироваться",
 	"userName":"Логин",
     "pass":"Пароль",
+    "eventCodeMask": "Маска кода события",
     "rememberMe":"Запомнить",
     "loginFailed": "Авторизация не удалась",
     "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
