--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -357,6 +357,10 @@
 	"userName":"Логин",
     "pass":"Пароль",
     "eventCodeMask": "Маска кода события",
+    "eventCodeMask000": "Технологические сообщения",
+    "eventCodeMask001": "Контроль техники пилотирования",
+    "eventCodeMask002": "Контроль работоспособности",
+    "eventCodeMask003": "Информационные сообщения",
     "rememberMe":"Запомнить",
     "loginFailed": "Авторизация не удалась",
     "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
