add results item menu

--- a/www/lang/EN.lang
+++ b/www/lang/EN.lang
@@ -254,6 +254,7 @@
 	"flightsItem": "Flights",
 	"bruTypesItem": "FDR",
 	"usersItem": "Users",
+	"resultsItem": "Results",
 	"searchItem": "Search",
 	
 	"viewItem" : "View",
