--- a/www/lang/ES.lang
+++ b/www/lang/ES.lang
@@ -254,6 +254,7 @@
 	"flightsItem": "Vuelo",
 	"bruTypesItem": "Registradores",
 	"usersItem": "Usuarios",
+	"resultsItem": "Results",
 	"searchItem": "Búsqueda",
 	
 	"viewItem" : "Visión",
