--- a/www/lang/RU.lang
+++ b/www/lang/RU.lang
@@ -254,6 +254,7 @@
 	"flightsItem": "Полеты",
 	"bruTypesItem": "Регистраторы",
 	"usersItem": "Пользователи",
+	"resultsItem": "Результаты",
 	"searchItem": "Поиск",
 	
 	"viewItem" : "Обзор",
